UPDATE moved fail2ban restart to nat_fed where iptable config happens, added forgotten drop rule at the end

--- a/roles/nat_fed/tasks/debian.yml
+++ b/roles/nat_fed/tasks/debian.yml
@@ -20,3 +20,6 @@
 
 - name : Restart IPtables - reload rules
   shell: iptables-restore <  /etc/iptables/rules.v4
+
+- name: Restart fail2ban
+  systemd: state=restarted enabled=yes name=fail2ban
