UPDATE gwmeta: added 10.4.4.0/24 dhcp and nat

--- a/roles/dhcp_meta/files/dhcpd.conf
+++ b/roles/dhcp_meta/files/dhcpd.conf
@@ -8,13 +8,21 @@ min-lease-time 60;
 shared-network "priv-cloud" {
 	interface eth1;
 
+        # metacloud-brno-private-nat
         subnet 10.4.0.0 netmask 255.255.255.0 {
 		option routers 10.4.0.1;
 		option domain-name-servers 147.251.4.33, 147.251.6.10;
-	} #GREEN
+	} 
 
+        # metacloud-brno-private
 	subnet 10.4.3.0 netmask 255.255.255.0 {
-	} #GREEN2
+	}
+
+        # metacloud-brno-private2
+        subnet 10.4.4.0 netmask 255.255.255.0 {
+                option routers 10.4.4.1;
+                option domain-name-servers 147.251.4.33, 147.251.6.10;
+        }
 }
 
 include "/etc/dhcp/dhcpd.conf.local";
