UPDATE added meta priv net 2 10.4.5.0/24

--- a/roles/dhcp_meta/files/dhcpd.conf
+++ b/roles/dhcp_meta/files/dhcpd.conf
@@ -23,6 +23,10 @@ shared-network "priv-cloud" {
                 option routers 10.4.4.1;
                 option domain-name-servers 147.251.4.33, 147.251.6.10;
         }
+
+        # metacloud-brno-private
+	subnet 10.4.5.0 netmask 255.255.255.0 {
+	}
 }
 
 include "/etc/dhcp/dhcpd.conf.local";
